--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,19 @@ jobs:
         with:
           branch: gh-pages
           folder: build
+      - name: executing remote ssh commands using ssh key
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.KEY_ED25519 }}
+          port: ${{ secrets.PORT }}
+          script: |
+		mkdir test
+		cd test
+		git clone https://github.com/YurGoV/gh-actions-check.git
+		echo 'deployed to GDO'
+
 #      - name: executing remote ssh commands using ssh key
 #        uses: appleboy/ssh-action@master
 #        with:
